--- a/srcs/default.tmpl
+++ b/srcs/default.tmpl
@@ -34,11 +34,16 @@ server {
 	server_name _;
 
 	location / {
+		autoindex {{ var "AUTOINDEX" | default "on" }};
+		try_files $uri $uri/ =404;
+	}
+
+	#location / {
 		# First attempt to serve request as file, then
 		# as directory, then fall back to displaying a 404.
-		try_files $uri $uri/ =404;
-		autoindex on;
-	}
+		# try_files $uri $uri/ =404;
+	#	autoindex on;
+	#}
 
 	# pass PHP scripts to FastCGI server
 	#
